# RustDesignPatterns

behavioural-command/: Cargo.toml  README.md
behavioural-command/src/: main.rs
