[package]
name = "behavioural-command"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "trait_objects"
test = false
bench = false

[[bin]]
name = "function_pointers"
test = false
bench = false

[[bin]]
name = "function_trait_objects"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]